--- a/shared-code/index.html
+++ b/shared-code/index.html
@@ -10,6 +10,7 @@
     <nav class="nav__container">
         <div>
             <h1>Nav</h1>
+            <h2>Nav 2</h2>
         </div>
     </nav>
 </body>
